Move external oidc issuer to build.properties and update based on feedback